--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,33 +1,33 @@
 <!--detail.wxml-->
 <view class="detailwrap">
-  <view wx:if="{{res !== ''}}">
+  <view wx:if="{{res !== ''}}" class="detail">
     <view class="banner">
-      <image src="{{res.pic}}"></image>
+      <image src="{{res.pic}}" mode="widthFix"></image>
     </view>
     <view class="layout des">
       <view class="name"><text>{{res.name}}</text></view>
-      <view class="preparetime"><text>{{res.preparetime}}</text></view>
-      <view class="cookingtime"><text>{{res.cookingtime}}</text></view>
-      <view class="cookingtime"><text>{{res.cookingtime}}</text></view>
-      <view class="peoplenum"><text>{{res.peoplenum}}</text></view>
+      <view class="cookingtime"><text>制作时间：{{res.cookingtime}}</text></view>
+      <view class="preparetime"><text>准备时间：{{res.preparetime}}</text></view>
+      <view class="peoplenum"><text>使用人数：{{res.peoplenum}}</text></view>
     </view>
     <view class="layout content">
-      <text>{{res.content}}</text>
+      <view class="h2"><text>营养知识</text></view>
+      <view class="p"><text>{{res.content}}</text></view>
     </view>
     <view class="layout material">
       <view class="h2"><text>用料</text></view>
-      <view wx:for="{{res.material}}" wx:for-index="idx" wx:for-item="value" wx:key="*this">
-        <text>{{value.mname}}: {{value.amount}}</text>
+      <view wx:for="{{res.material}}" wx:for-index="idx" wx:for-item="value" wx:key="*this" class="mrow">
+        <view class="ml"><text>{{value.mname}}</text></view>
+        <view class="mr"><text>{{value.amount}}</text></view>
       </view>
     </view>
     <view class="layout process">
       <view class="h2"><text>做法</text></view>
       <view wx:for="{{res.process}}" wx:for-index="idx" wx:for-item="value" wx:key="*this">
-        <text>{{idx}}</text>
-        <image src="{{value.pic}}"></image>
-        <text>{{value.pcontent}}</text>
+        <view class="pic"><image src="{{value.pic}}" mode="widthFix"></image></view>
+        <view class="step"><text>{{idx + 1}}，{{value.pcontent}}</text></view>
       </view>
     </view>
   </view>
-  <view wx:else>{{msg}}</view>
+  <view wx:else class="loading">{{msg}}</view>
 </view>
