--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,29 +1,83 @@
 /**index.wxss**/
-.userinfo {
+.home {
+  height: 100%;
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
+}
+.recommend {
+  width: 100%;
+  height: 400rpx;
+  overflow: hidden;
+  position: relative;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
   align-items: center;
-  margin-bottom: 50px;
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.recommend .pic {
+  width: 100%;
+  height: 100%;
 }
-
-.userinfo-nickname {
-  color: #aaa;
+.recommend .pic image {
+  width: 100%;
+}
+.recommend .txt {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 70rpx;
+  background: linear-gradient(to top, rgba(0, 0, 0, .8), transparent);
+  color: #fff;
+  font-weight: 700;
+  box-sizing: border-box;
+  padding-left: 30rpx;
 }
 
 .seachbox {
   width: 100%;
+  box-sizing: border-box;
+  padding: 0 30rpx;
+  margin-top: 60rpx;
 }
 .seachbox input {
   border: 1px solid #ddd;
+  background-color: #fff;
   padding: 20rpx;
   border-radius: 10rpx;
   font-size: 32rpx;
   margin-bottom: 30rpx;
+}
+
+.hot {
+  margin-top: 60rpx;
+  padding: 0 30rpx;
+}
+.hot .catebox {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 30rpx;
+}
+.hot .cate {
+  background-color: #fff;
+  overflow: hidden;
+  margin-left: 4%;
+  margin-bottom: 30rpx;
+  width: 48%;
+  height: 420rpx;
+}
+.hot .cate:nth-child(2n + 1) {
+  margin-left: 0;
+}
+.hot .cate .pic {
+  width: 100%;
+  height: 360rpx;
+  overflow: hidden;
+}
+.hot .cate .pic image {
+  width: 100%;
+}
+.hot .cate .txt {
+  text-align: center;
 }
